# Broc

./: .env.example  .gitignore  RAPPORT_POTENTIEL_ECONOMIQUE_MARKETING.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ios-testflight.yml
docs/: items-catalogue.csv  renommage-droits-auteur.md
public/: app-ads.txt  manifest.webmanifest
scripts/: atelier-prompts.json  audit-i18n-residuel.mjs  brocante-prompts.json  brocante-scenes-prompts.json  capacite-camions.mjs  clean-item-pixels.py  clients-prompts.json  competences-prompts.json  convert-garage.mjs  convert-items-png.mjs  convert-utilitaire.mjs  dilate-masks.mjs  exportItemsCsv.ts  finalize-item-bg.mjs  generate-app-icons.mjs  generate-atelier-images.mjs  generate-boite-mystere.mjs  generate-brocante-images.mjs  generate-brocante-scenes.mjs  generate-cachet-cire.mjs  generate-cartes-postales.mjs  generate-client-personas.mjs  generate-competences.mjs  generate-icon-source.mjs  generate-item-images.mjs  generate-item-thumbs.mjs  generate-machine-energie.mjs  generate-qg-images.mjs  generate-webp.mjs  ios-sim.sh  item-masters.json  item-prompts.json  mask-bbox.mjs  measure-cadres.mjs  measure-masks.mjs  optimize-item-images.mjs  process-cadres.mjs  qg-prompts.json  rue-tools.mjs  strip-icon-bg.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs
src/app/: error.tsx  (+5 more)
(+663 files in other folders)
