[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"

# Patch local : corrige la sérialisation des dates de notifs planifiées, dont le
# format ISO-8601 (9 décimales + offset `+00:00`) était rejeté par le parseur
# natif iOS du plugin → notifs jamais programmées sur iOS. Le crate vendoré ne
# diffère de la 2.3.3 que par cette sérialisation (src/models.rs). À retirer si
# le plugin amont corrige le bug.
[patch.crates-io]
tauri-plugin-notification = { path = "vendor/tauri-plugin-notification" }
